data/derived/comb/progs/unify/prog1402.ml.out
Characters 176-177:
  | Average (a,b) -> (eval(a,x,y) +. eval(b,x,y) /. 2)
                                                    ^
Error: This expression has type int but an expression was expected of type
         float
